--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Rust
 target/
-Cargo.lock
+# Cargo.lock should be committed for binaries (applications)
+# Only ignore for libraries
 
 # IDE
 .idea/
