--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ fastrand = "2.0"
 futures-util = "0.3"
 hex = "0.4"
 html-escape = "0.2"
-lru = "0.12"
+lru = "0.16"
 oauth2 = "4.4"
 open = "5.0"
 qr2term = "0.3"
@@ -51,6 +51,7 @@ tokio-process = "0.2"
 tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+# Note: Ensure >= 0.3.20 for RUSTSEC-2025-0055 (ANSI escape sequence injection) - current: 0.3.22
 tzfile = "0.1.3"
 url = "2.5"
 urlencoding = "2.1"
