--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ slack-morphism = "1.3"
 teloxide = "0.13"
 thiserror = "1.0"
 tokio = { version = "1.40", features = ["full"] }
-tokio-process = "0.2"
+# tokio-process = "0.2"  # Removed: unused and pulls in vulnerable crossbeam-queue 0.1.2
 tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -62,5 +62,15 @@ whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-ru
 whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", package = "whatsapp-rust-ureq-http-client", branch = "main" }
 which = "6.0"
 
+# Security: Force minimum versions of transitive dependencies to resolve vulnerabilities
+# - CVE-2022-23639 / GHSA-qc84-gqf4-9926: crossbeam-utils AtomicCell unsoundness (fixed in >= 0.8.7)
+#   Forces all transitive dependencies to use >= 0.8.7 (0.8.21 is latest 0.8.x)
+# - CVE-2020-35910 / GHSA-ppj3-7jw3-8vc4: lock_api data races (fixed in >= 0.4.2)
+#   Forces all transitive dependencies to use >= 0.4.2 (0.4.14 is latest 0.4.x)
+# - crossbeam-queue vulnerability: Resolved by removing unused tokio-process dependency
+crossbeam-utils = "0.8.21"  # CVE-2022-23639: >= 0.8.7 required
+lock_api = "0.4.14"  # CVE-2020-35910: >= 0.4.2 required
+
 [dev-dependencies]
 tokio-test = "0.4"
+tempfile = "3.10"
