--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ rusqlite = { version = "0.31", features = ["bundled"] }
 scraper = "0.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.9"
 serenity = "0.12"
 sha2 = "0.10"
 slack-morphism = "1.3"
