--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ serenity = "0.12"
 sha2 = "0.10"
 slack-morphism = "1.3"
 teloxide = "0.13"
+tempfile = "3.10"
 thiserror = "1.0"
 tokio = { version = "1.40", features = ["full"] }
 # tokio-process = "0.2"  # Removed: unused and pulls in vulnerable crossbeam-queue 0.1.2
