--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ which = "6.0"
 # - crossbeam-queue vulnerability: Resolved by removing unused tokio-process dependency
 crossbeam-utils = "0.8.21"  # CVE-2022-23639: >= 0.8.7 required
 lock_api = "0.4.14"  # CVE-2020-35910: >= 0.4.2 required
+thiserror = "2.0.18"
 
 [dev-dependencies]
 tokio-test = "0.4"
