--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ qr2term = { version = "0.3", optional = true }
 qrcode = { version = "0.14", optional = true }
 regex = "1.12"
 reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
+rmcp = { version = "0.15", features = ["client", "transport-child-process"] }
 rusqlite = { version = "0.37", features = ["bundled"] }
 scraper = "0.25"
 serde = { version = "1.0", features = ["derive"] }
