--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,10 +47,10 @@ jobs:
             runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
           - name: macos-x86_64
-            runner: macos-13
+            runner: macos-15
             target: x86_64-apple-darwin
           - name: macos-arm64
-            runner: macos-14
+            runner: macos-15
             target: aarch64-apple-darwin
     env:
       VERSION: ${{ needs.changelog.outputs.version }}
@@ -88,6 +88,8 @@ jobs:
 
       - name: Build release binary
         run: cargo build --release --target ${{ matrix.target }}
+        env:
+          SOURCE_DATE_EPOCH: "1"
 
       - name: Create archive
         run: |
@@ -154,16 +156,18 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
 
   release:
     name: GitHub Release
     runs-on: ubuntu-latest
     needs: [changelog, build, docker]
     steps:
-      - name: Download all artifacts
+      - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
+          pattern: "*-*"
 
       - name: Collect release assets
         run: |
