--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ serde_yaml_ng = "0.10"
 serenity = { version = "0.12", optional = true }
 sha1 = { version = "0.10", optional = true }
 sha2 = "0.10"
+subtle = "2.6"
 teloxide = { version = "0.17", default-features = false, features = ["rustls", "ctrlc_handler"], optional = true }
 tempfile = "3.25"
 tokio = { version = "1.49", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
