--- a/config.example.json
+++ b/config.example.json
@@ -202,6 +202,11 @@
       }
     }
   },
+  "credentialHelper": {
+    "command": "",
+    "args": [],
+    "format": "json"
+  },
   "voice": {
     "transcription": {
       "enabled": false,
