--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,11 @@ jobs:
         run: cargo test --lib --verbose
 
       - name: Run integration tests
-        run: cargo test --test session_management --test cron_jobs --test tool_registry --test message_flow --verbose -- --test-threads=1
+        run: cargo test --test session_management --test cron_jobs --test tool_registry --test message_flow --test config_validation --test context_and_skills --test error_handling --test filesystem_tools --test memory_integration --test multi_turn_session --test shell_exec --test tool_context_caching --test compaction_integration --verbose -- --test-threads=1
         env:
           OXICRAB_HOME: ${{ runner.temp }}/oxicrab-test
+
+      - name: Security audit
+        run: |
+          cargo install cargo-audit --quiet 2>/dev/null || true
+          cargo audit || true
