1. Dependabot — .github/dependabot.yml — weekly checks for both Cargo deps    and GitHub Actions versions   2. ~~Cargo.lock~~ — already committed and documented in .gitignore   3. rust-toolchain.toml — pins nightly-2026-02-06 with rustfmt + clippy   components so local builds match CI   4. CI concurrency — added concurrency: { group: ci-${{ github.ref }},   cancel-in-progress: true } to cancel stale runs   5. Pages checkout — actions/checkout@v4 → @v6 to match other workflows   6. Linux ARM64 release — added aarch64-unknown-linux-gnu target with   cross-compiler toolchain and linker config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main, master ]
 
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   CARGO_TERM_COLOR: always
   NIGHTLY_VERSION: nightly-2026-02-06
