--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,9 @@ jobs:
           - name: linux-x86_64
             runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+          - name: linux-arm64
+            runner: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
           - name: macos-x86_64
             runner: macos-15
             target: x86_64-apple-darwin
@@ -68,6 +71,9 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake
+          if [ "${{ matrix.target }}" = "aarch64-unknown-linux-gnu" ]; then
+            sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu
+          fi
 
       - name: Install system dependencies (macOS)
         if: runner.os == 'macOS'
@@ -90,6 +96,7 @@ jobs:
         run: cargo build --release --target ${{ matrix.target }}
         env:
           SOURCE_DATE_EPOCH: "1"
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: ${{ matrix.target == 'aarch64-unknown-linux-gnu' && 'aarch64-linux-gnu-gcc' || '' }}
 
       - name: Create archive
         run: |
