reqwest 0.12 → 0.13 Upgrade Summary
  Cargo.toml (1 line):
  - 0.12 → 0.13, rustls-tls → rustls, removed
  macos-system-configuration, added query + form

  src/auth/google.rs (1 file):
  - Replaced oauth2's exchange_code().request_async(&http_client) with a
  direct HTTP POST to Google's token endpoint — the same pattern already
  used by run_manual_flow(). This avoids the version conflict where oauth2
  v5.0.0 internally depends on reqwest 0.12.
  - Removed unused AuthorizationCode and TokenResponse imports.

  Zero changes to the other 20 files that use reqwest — all APIs
  (Client::builder(), .resolve(), .json(), .text(), .status(), etc.) are
  identical in 0.13.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,7 +55,7 @@ open = "5.0"
 qr2term = { version = "0.3", optional = true }
 qrcode = { version = "0.14", optional = true }
 regex = "1.12"
-reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
+reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "stream", "rustls", "charset", "http2", "query", "form"] }
 rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
 rusqlite = { version = "0.37", features = ["bundled"] }
 scraper = "0.25"
