#: 1   Severity: CRITICAL   File: agent/loop/mod.rs   Fix: panic = "unwind" required for spawn-based panic isolation — added     [profile.release] panic = "unwind" to Cargo.toml   ────────────────────────────────────────   #: 2   Severity: HIGH   File: providers/anthropic_common.rs   Fix: Missing stop_reason: "end_turn" parsing — treated as continued tool     loop   ────────────────────────────────────────   #: 3   Severity: HIGH   File: session/manager.rs   Fix: auto_save_interval of 0 caused tight spin loop — added .max(10) guard   ────────────────────────────────────────   #: 4   Severity: HIGH   File: cron/service/mod.rs   Fix: Cron jobs rescheduled into the past after missed runs — skip-forward     to next future time   ────────────────────────────────────────   #: 5   Severity: HIGH   File: providers/gemini/mod.rs   Fix: Missing Gemini finish reason mapping — RECITATION/SAFETY/OTHER now     handled   ────────────────────────────────────────   #: 6   Severity: MEDIUM   File: providers/openai/mod.rs   Fix: JSON tool args silently fell back to raw string on parse failure —     added warn!()   ────────────────────────────────────────   #: 7   Severity: MEDIUM   File: bus/queue.rs   Fix: MessageBus queue unbounded — added 10k message cap with warn!() on     overflow   ────────────────────────────────────────   #: 8   Severity: MEDIUM   File: channels/discord.rs   Fix: Discord update_presence used wrong enum variant — fixed to     ActivityType::Custom   ────────────────────────────────────────   #: 9   Severity: MEDIUM   File: agent/memory/memory_db/mod.rs   Fix: MemoryDB search used LIKE '%query%' — switched to FTS5 full-text     search   ────────────────────────────────────────   #: 10   Severity: MEDIUM   File: agent/memory/indexer.rs   Fix: Indexer regex didn't handle Windows line endings — added \r?   ────────────────────────────────────────   #: 11   Severity: MEDIUM   File: cron/event_matcher.rs   Fix: Event matcher channel_message pattern only matched exact 

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,14 +117,14 @@ jobs:
       - name: Build DEB package
         if: runner.os == 'Linux'
         run: |
-          cargo install cargo-deb
+          cargo install cargo-deb --force
           cargo deb --no-build --target ${{ matrix.target }}
           cp target/${{ matrix.target }}/debian/*.deb .
 
       - name: Build RPM package
         if: runner.os == 'Linux'
         run: |
-          cargo install cargo-generate-rpm
+          cargo install cargo-generate-rpm --force
           cargo generate-rpm --target ${{ matrix.target }}
           cp target/${{ matrix.target }}/generate-rpm/*.rpm .
 
