--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ anyhow = "1.0"
 async-trait = "0.1"
 axum = { version = "0.8", optional = true }
 base64 = "0.22"
+brush-parser = "0.3"
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.10"
 clap = { version = "4.5", features = ["derive"] }
@@ -49,6 +50,7 @@ hmac = { version = "0.12", optional = true }
 html-escape = "0.2"
 indexmap = "2"
 keyring = { version = "3", optional = true }
+landlock = "0.4"
 lru = "0.16"
 oauth2 = "5.0"
 open = "5.0"
@@ -65,6 +67,7 @@ serde_yaml_ng = "0.10"
 serenity = { version = "0.12", optional = true }
 sha1 = { version = "0.10", optional = true }
 sha2 = "0.10"
+shlex = "1.3"
 subtle = "2.6"
 teloxide = { version = "0.17", default-features = false, features = ["rustls", "ctrlc_handler"], optional = true }
 tempfile = "3.25"
