Part 1: MCP Server Sandboxing
  - src/config/schema.rs — Added sandbox: SandboxConfig to McpServerConfig
  (was already in HEAD from prior work)
  - src/agent/tools/mcp/mod.rs — McpManager::new() now takes workspace path,
   connect_server() applies Landlock sandbox to MCP child processes via
  apply_to_command()
  - src/agent/tools/setup.rs — register_mcp() passes &ctx.workspace to
  McpManager::new()

  Part 2: TOCTOU Fix with cap-std

  - src/agent/tools/filesystem/mod.rs — Added open_confined() helper using
  cap_std::fs::Dir (backed by openat()). When allowed_roots is Some, all
  four tools (read, write, edit, list) use confined Dir handles for atomic
  path-check + file-operation. Unrestricted mode unchanged.
  - src/agent/tools/filesystem/tests.rs — Added
  test_open_confined_normal_read, test_open_confined_dir_traversal_blocked,
  test_open_confined_symlink_escape_blocked, test_read_file_confined_success

  Part 3: Config File Locking

  - src/config/loader/mod.rs — load_config() acquires shared lock via
  fs2::FileExt::lock_shared(). save_config() acquires exclusive lock via
  separate .json.lock lockfile (survives atomic renames).
  - src/config/loader/tests.rs — Added test_concurrent_save_no_corruption
  (10 threads), test_lock_file_created

  Part 4: Error Message Path Sanitization

  - NEW src/utils/path_sanitize.rs — sanitize_path() and
  sanitize_error_message() with 8 tests
  - src/agent/tools/filesystem/mod.rs — All tools gained workspace:
  Option<PathBuf> field; error messages sanitized
  - src/agent/tools/mcp/proxy.rs — McpProxyTool gained workspace field;
  error outputs sanitized:

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ async-trait = "0.1"
 axum = { version = "0.8", optional = true }
 base64 = "0.22"
 brush-parser = "0.3"
+cap-std = "3"
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.10"
 clap = { version = "4.5", features = ["derive"] }
@@ -43,6 +44,7 @@ cron = "0.15"
 dirs = "6.0"
 fastembed = { version = "5", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
 fastrand = "2.0"
+fs2 = "0.4"
 form_urlencoded = "1.2"
 futures-util = "0.3"
 hex = "0.4"
