--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,6 @@ hmac = { version = "0.12", optional = true }
 html-escape = "0.2"
 indexmap = "2"
 keyring = { version = "3", optional = true }
-landlock = "0.4"
 lru = "0.16"
 oauth2 = "5.0"
 open = "5.0"
@@ -99,6 +98,9 @@ crossbeam-utils = "0.8.21"  # CVE-2022-23639: >= 0.8.7 required
 lock_api = "0.4.14"  # CVE-2020-35910: >= 0.4.2 required
 thiserror = "2.0.18"
 iana-time-zone = "0.1.65"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+landlock = "0.4"
 
 [profile.release]
 opt-level = "z"       # Optimize for binary size
