--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ async-trait = "0.1"
 axum = { version = "0.8", optional = true }
 base64 = "0.22"
 brush-parser = "0.3"
-cap-std = "3"
+cap-std = "4"
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.10"
 clap = { version = "4.5", features = ["derive"] }
@@ -120,15 +120,44 @@ section = "utils"
 priority = "optional"
 depends = "$auto"
 extended-description = "A high-performance Rust multi-channel AI assistant framework that connects chat platforms (Telegram, Discord, Slack, WhatsApp, Twilio) to LLM providers via an agent loop with tool execution."
+conf-files = ["/etc/oxicrab/config.json"]
+maintainer-scripts = "deploy/deb"
 assets = [
     ["target/release/oxicrab", "usr/bin/", "755"],
+    ["deploy/oxicrab-system.service", "lib/systemd/system/oxicrab.service", "644"],
+    ["config.example.json", "usr/share/doc/oxicrab/config.example.json", "644"],
     ["README.md", "usr/share/doc/oxicrab/README.md", "644"],
     ["LICENSE", "usr/share/doc/oxicrab/LICENSE", "644"],
 ]
 
 [package.metadata.generate-rpm]
-assets = [
-    { source = "target/release/oxicrab", dest = "/usr/bin/oxicrab", mode = "0755" },
-    { source = "README.md", dest = "/usr/share/doc/oxicrab/README.md", mode = "0644" },
-    { source = "LICENSE", dest = "/usr/share/doc/oxicrab/LICENSE", mode = "0644" },
-]
+post_install_script = "deploy/rpm/post_install.sh"
+pre_uninstall_script = "deploy/rpm/pre_uninstall.sh"
+
+[[package.metadata.generate-rpm.assets]]
+source = "target/release/oxicrab"
+dest = "/usr/bin/oxicrab"
+mode = "0755"
+
+[[package.metadata.generate-rpm.assets]]
+source = "deploy/oxicrab-system.service"
+dest = "/usr/lib/systemd/system/oxicrab.service"
+mode = "0644"
+
+[[package.metadata.generate-rpm.assets]]
+source = "config.example.json"
+dest = "/usr/share/doc/oxicrab/config.example.json"
+mode = "0644"
+doc = true
+
+[[package.metadata.generate-rpm.assets]]
+source = "README.md"
+dest = "/usr/share/doc/oxicrab/README.md"
+mode = "0644"
+doc = true
+
+[[package.metadata.generate-rpm.assets]]
+source = "LICENSE"
+dest = "/usr/share/doc/oxicrab/LICENSE"
+mode = "0644"
+doc = true
